# SoftwareRenderer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  debug.rdc  imgui.ini  valgrind.sh
cmake/: Doxygen.cmake  FlagControl.cmake  SourceList.cmake  Testing.cmake
include/glad/: gl.h
src/: App.cpp  App.h  CMakeLists.txt  Main.cpp  Renderer.cpp  Renderer.h
src/imgui/: CMakeLists.txt  imgui_tables.cpp  imgui_widgets.cpp
src/math/: CMakeLists.txt  Matrix.hpp  Matrix4x4.hpp  Quaternion.hpp  Vec.hpp  Vector3.hpp
src/render/: CMakeLists.txt  Camera.hpp  Light.hpp  Mesh.cpp  Mesh.hpp  Ray.hpp  Vertex.hpp
src/util/: CMakeLists.txt  Math.hpp  Sse3.h  Util.hpp
